fixed navbar width on mobile and add media to timer component

--- a/client/src/components/Navbar/index.module.css
+++ b/client/src/components/Navbar/index.module.css
@@ -60,7 +60,7 @@
        flex-direction: column;
        align-items: flex-start;
        height: 100vh;
-       width: 7vw;
+       width: 10vw;
        top:0;
        left: 0;
        transition:0.5s;
@@ -82,7 +82,7 @@
     .nav__li{
         border-right: none;
         padding-bottom: 0.5rem;
-        padding-left: 7vw;
+        padding-left: 10vw;
     }
   }
   @media screen and (max-width: 530px) {
